; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_script_find_config_file.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_script_find_config_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @script_find_config_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @script_find_config_file(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.MPContext*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call %struct.MPContext* @get_mpctx(i32* %6)
  store %struct.MPContext* %7, %struct.MPContext** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i8* @luaL_checkstring(i32* %8, i32 1)
  store i8* %9, i8** %4, align 8
  %10 = load %struct.MPContext*, %struct.MPContext** %3, align 8
  %11 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i8* @mp_find_config_file(i32* null, i32 %12, i8* %13)
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %1
  %18 = load i32*, i32** %2, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @lua_pushstring(i32* %18, i8* %19)
  br label %24

21:                                               ; preds = %1
  %22 = load i32*, i32** %2, align 8
  %23 = call i32 @lua_pushnil(i32* %22)
  br label %24

24:                                               ; preds = %21, %17
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @talloc_free(i8* %25)
  ret i32 1
}

declare dso_local %struct.MPContext* @get_mpctx(i32*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i8* @mp_find_config_file(i32*, i32, i8*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @talloc_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
